#0000 Service: Correction of deprecated code #0000 Maven: Minimization of dependence